# file-tranfer

./: .env.exemple  Cargo.toml  README.md  test.txt
.github/workflows/: pages.yml
docs/: _config.yml  index.md  projeto-file-transfer.md  projeto-premissa.md  projeto.md  rust-capacidade_escrita.md  rust-confiabilidade.md  rust-construtores.md  rust-custo.md  rust-exemplos.md  rust-historico.md  rust-legibilidade.md  rust.md
pages/: index.md
src/: client.rs  common.rs  lib.rs  main.rs  server.rs
