[package]
name = "trabalho-lp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
dotenv = "0.15.0"
futures = "0.3.28"
rand = "0.5.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
